Fix pill layout issues (#1567)
* Update README

* Fix pill layout issues

Firefox and IE were not placing the pill delete icon within the pill, ref #1565 required applying `bottom: 0;` to `xui-newpill--button-icon`.

This PR also addresses an issue where avatars within pills were being rendered below center in Firefox and IE. The fix for which is to apply an explicit `height` to `xui-newpill-layout` which allows `align-items: center` to take effect and vertically center the `xui-newpill--content` child element.

Cut XUI 10.17.1

@UXE/uxe-team

* Update README

--- a/src/sass/objects/_pills.scss
+++ b/src/sass/objects/_pills.scss
@@ -139,7 +139,7 @@
 }
 
 .#{$ns}-newpill-layout {
-	max-height: 30px;
+	height: $xui-icon-standard;
 	max-width: 200px;
 	padding-right: 10px;
 	position: relative;
@@ -169,6 +169,7 @@
 }
 
 .#{$ns}-newpill--button-icon {
+	bottom: 0;
 	position: absolute;
 	right: 0;
 }
